--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@octokit/core": "^3.4.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
@@ -33,6 +35,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-spinners": "^0.10.6",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
